--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,11 @@
   font-family: serif;
   text-align: center;
   background-color: white;
+  white-space: nowrap;
+  overflow-x: scroll;
+  overflow-y: scroll;
+  height: 200px;
+  width: 200px;
 }
 
 .addNew {
@@ -70,4 +75,25 @@
   background-color: blue;
   grid-gap: 10px, 10px;
   width: 30px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
