--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,11 @@
 .App {
   font-family: serif;
   text-align: center;
-  background-color: white;
-  white-space: nowrap;
-  overflow-x: scroll;
-  overflow-y: scroll;
-  height: 200px;
-  width: 200px;
+  height: 400px;
 }
 
 .addNew {
-  position: absolute;
+  position: relative;
   font-family: serif;
   font-size: 40px;
   background-color: rgba(95, 150, 235, 0.5);
@@ -30,70 +25,30 @@
 }
 
 .inputField {
-  position: absolute;
+  position: relative;
   font-family: serif;
   font-size: 14px;
   border: none;
   height: 25px;
   width: 200px;
-  transform: translate(-150px, 150px);
+  transform: translate(400px, 450px);
   background-color: rgba(0, 255, 0, 0.2);
 }
 
-/* @keyframes show-input-fields {
-  0% : ;
-  50% : ;
-  100% : ;
-} */
-
-.ul {
-  background-color: rgb(250, 250, 250);
-  margin: 10px;
-  height: 300px;
-}
-
-.listItem {
-  display: grid;
-  grid-template-columns: auto 100px auto;
-  vertical-align: top;
-}
-/*
- to slow show the text area on click and hide on submit and that element should 
- write over the list items render in the background
-*/
 .grid-container {
   position: relative;
-  background-color: red;
   display: grid;
-  height: 300px;
-  grid-template-columns: auto;
-  /* wrap */
+  grid-template-columns: 40px;
+  list-style: none;
+  overflow-y: scroll;
+  width: 60px;
+  align-items: center;
+  transform: translateX(500px);
+  background-color: hotpink;
 }
 
 .grid-item {
   position: relative;
   background-color: blue;
   grid-gap: 10px, 10px;
-  width: 30px;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 10px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
 }
